# Facial-Recongition-Login

./: .gitignore  README.md  pyproject.toml
Facial_Recognition/: Error_types.py  Facial_recongition.py  __init__.py  database.py  passwords.db  register_GUI.py
File_manager/: Manager.py  __init__.py
Windows/: Login.py
Windows/Styles/: Login.qss  style.qss
styles/: Login.qss
