[tool.poetry]
name = "facial-recongition-login"
version = "0.1.0"
description = ""
authors = ["MusaMoses <mmusa.akhan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
face-recognition = "^1.3.0"
opencv-contrib-python = "^4.5.1.48"
numpy = "^1.21.1"
PyQt5 = "^5.15.4"
peewee = "^3.14.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
